--- a/client/package.json
+++ b/client/package.json
@@ -10,23 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.10",
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "daisyui": "^4.7.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.10"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "vite": "^6.3.5"
   }
 }
