--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^4.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
     "react-toastify": "^11.0.5",
